# Changes

## [0.7.0]  (Pending)
 - Reorganized code for building with gradle.
 - Migrated to GitHub.
 - Added an experimental Android reader.
 - Added a tar distribution for OSX/Linux with launcher scripts.
 - License changed to GPLv3.
 - Fixed the downloader's broken find button.
 - Added CatalogParser and DownloadableUHS to the core library.

## [0.6.7]  (Unreleased)
 - Moved printNode() from the parser to become a method in UHSNode objects.
 - Added a restriction attribute to UHSNode for any derivative readers that might care about incentive hunks.
 - Added UHSNode.getDecoratedContent() to handle markup/escapes without GUI reader meddling.
 - Added UHSRootNode getters for a hint file's title and version.
 - Added Proto UHS (*.PUHS) support; from the official UHS Source Editor.
 - Added a new class, Proto4xUHSParser.
 - Renamed OpenUHSLib to UHSParser.
 - Updated javadoc for UHSParser.parse88Format().
 - Updated javadoc for UHSParser.parseHyperImgNode().
 - Added support for nested nodes within images besides overlay and link.
 - Renamed children of Hint and NestHint to "HintData" nodes.
 - Moved setErrorHandler() methods to a global class, UHSErrorHandlerManager.

## [0.6.6]  (2012-02-18)
 - Added a Find button to the downloader.
 - Moved user-configurable settings into a third tab.
 - Added a setting for the reader's font size.
 - Fixed notices in UHSFetcher that weren't using the logging interface.
 - Fixed the "Saved my.uhs" log message, miscategorized as "Error".
 - Fixed threading issues that could cause hangs.

## [0.6.5]  (2011-01-19)
 - Added getopt jar, which was missing in 0.6.4.
 - Added Linux/Mac .command frontend script.
 - Made Windows frontend script fancier and commandline friendly.
 - Added commandline switches to print or extract content from hint files.
 - Added an error popup when unable to download from a server.
 - Added logging to "log.txt".
 - Changed the lib's UHSNode content to String/byte[], leaving image/sound handling to the GUI.